# lazyifconfig

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: publish-crate.yml  publish-homebrew-tap.yml  publish-winget.yml
docs/superpowers/plans/: 2026-06-08-lazyifconfig-implementation.md  2026-06-08-lazyifconfig-mvp.md  2026-06-11-route-inspector.md  2026-06-11-windows-tool-support.md
docs/superpowers/specs/: 2026-06-08-lazyifconfig-design.md  2026-06-08-subnet-view-design.md  2026-06-11-windows-tool-support-design.md
fixtures/: docker.txt  macos14.txt  macos15.txt  vpn.txt
src/: app.rs  command.rs  lib.rs  main.rs  model.rs  ui.rs  update.rs
src/collector/: interface.rs  mod.rs  ports.rs  routes.rs  stats.rs  system.rs
src/route_inspector/: diagnostics.rs  graph.rs  mod.rs  vpn.rs
src/tools/: dns.rs  ip_info.rs  mod.rs  ping.rs  tls.rs  traceroute.rs  whois.rs
tests/: app_state.rs  parser_interface.rs  route_inspector.rs  system_metrics.rs  tools_registry.rs  tools_runner.rs
