[package]
name = "lazyifconfig"
version = "0.2.0"
edition = "2021"
description = "Terminal UI for inspecting local network state on macOS"
readme = "README.md"
repository = "https://github.com/hunchulchoi/lazyifconfig"
homepage = "https://github.com/hunchulchoi/lazyifconfig"
license = "MIT"
keywords = ["network", "tui", "macos", "ifconfig", "netstat"]
categories = ["command-line-utilities"]
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "docs/screenshots/raw/*.png",
]

[dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
