[package]
name = "lazyifconfig"
version = "0.2.10"
edition = "2021"
description = "Terminal UI for inspecting local network state"
readme = "README.md"
repository = "https://github.com/choihunchul/lazyifconfig"
homepage = "https://github.com/choihunchul/lazyifconfig"
license = "MIT"
keywords = ["network", "tui", "macos", "linux", "ifconfig"]
categories = ["command-line-utilities"]
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "docs/screenshots/raw/*.png",
]

[dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "process", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
petgraph = "0.6.5"
rustls = "0.23"
webpki-roots = "0.26"
x509-parser = "0.17"
